--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Guo Xiaoyuan
 email: xiaoyuanguo.ucas@gmail.com
 url: https://xiaoyuanguo.github.io
 description: "The research and coding homepage for Guo Xiaoyuan.  Contains blog posts for recent successful research endeavors and up-to-date news about ongoing research."
-skills: "3D reconstruction, Medical Image Analysis"
+skills: "Computer Vision, Biomedical Image Analysis"
 meta_author: Xiaoyuan Guo
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
