--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ color:
 # Footer settings
 footer:
   copyright: Guo Xiaoyuan
-  location: Beijing, China
+  location: Atlanta, US
   social: On the Interwebs
   credits: Credits
 
