--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Guo Xiaoyuan
 email: xiaoyuanguo.ucas@gmail.com
 url: https://xiaoyuanguo.github.io
 description: "The research and coding homepage for Guo Xiaoyuan.  Contains blog posts for recent successful research endeavors and up-to-date news about ongoing research."
-skills: "This is the old version, please visit <a href="https://xiaoyuanguo.github.io/academics/" the new version</a> "
+skills: "This is the old version, please visit https://xiaoyuanguo.github.io/academics/ "
 meta_author: Xiaoyuan Guo
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
