--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: Guo Xiaoyuan
+title: 'Guo Xiaoyuan<a href="https://davidsonic.github.io/website/">Vision Lab Homepage</a>'
 email: xiaoyuanguo.ucas@gmail.com
 url: https://xiaoyuanguo.github.io
 description: "The research and coding homepage for Guo Xiaoyuan.  Contains blog posts for recent successful research endeavors and up-to-date news about ongoing research."
-skills: "This is the old version, please visit https://xiaoyuanguo.github.io/academics/ "
+skills: "Welcome to my page! This version is no longer used, please visit https://xiaoyuanguo.github.io/academics/ "
 meta_author: Xiaoyuan Guo
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
