--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 'Guo Xiaoyuan<a href="https://davidsonic.github.io/website/">Vision Lab Homepage</a>'
+title: Guo Xiaoyuan
 email: xiaoyuanguo.ucas@gmail.com
 url: https://xiaoyuanguo.github.io
 description: "The research and coding homepage for Guo Xiaoyuan.  Contains blog posts for recent successful research endeavors and up-to-date news about ongoing research."
