--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Guo Xiaoyuan
 email: xiaoyuanguo.ucas@gmail.com
 url: https://xiaoyuanguo.github.io
-description: "This is the old homepage for Guo Xiaoyuan.  Please visit <a herf="https://xiaoyuanguo.github.io/academics/"> this one </a>."
+description: "This is the old homepage for Guo Xiaoyuan.  Please visit https://xiaoyuanguo.github.io/academics/ " 
 skills: "Welcome to my page! This version is no longer used, please visit https://xiaoyuanguo.github.io/academics/ "
 meta_author: Xiaoyuan Guo
 paginate_path: "blog/page:num/"
